# ylevaalikone2015

./: .gitignore  DBCreate.hs  DBLoad.hs  Dockerfile  Main.hs  README.md  VK.hs  a.cabal  create_tables.sql  fetch_data.sh  run.sh  ylevaalikone2015.cabal
notebook/2CX4D4RV6/: note.json
work/: Example.ipynb
