name:                a
version:             0.1.0.0
author:              Paavo
maintainer:          pparkkin@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable a
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , text
                     , MissingH
